// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`restaurant-card > no props 1`] = `
"<div class=\\"v-card v-theme--light v-card--density-default v-card--variant-elevated\\">
  <!---->
  <div class=\\"v-card__loader\\">
    <div class=\\"v-progress-linear v-theme--light v-locale--is-ltr\\" style=\\"top: 0px; height: 0px; --v-progress-linear-height: 2px; left: 50%; transform: translateX(-50%);\\" role=\\"progressbar\\" aria-hidden=\\"true\\" aria-valuemin=\\"0\\" aria-valuemax=\\"100\\">
      <!---->
      <div class=\\"v-progress-linear__background\\" style=\\"width: 100%;\\"></div>
      <div class=\\"v-progress-linear__indeterminate\\">
        <div class=\\"v-progress-linear__indeterminate long\\"></div>
        <div class=\\"v-progress-linear__indeterminate short\\"></div>
      </div>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  <v-img-stub height=\\"100\\" cover=\\"true\\" eager=\\"false\\" options=\\"[object Object]\\" src=\\"\\" inline=\\"false\\" transition=\\"fade-transition\\"></v-img-stub>
  <div class=\\"v-card-title\\"></div>
  <div class=\\"v-alert v-theme--light text-warning v-alert--density-default v-alert--variant-tonal mx-4 w-1/2\\" role=\\"alert\\">
    <!----><span class=\\"v-alert__underlay\\"></span>
    <!---->
    <div class=\\"v-alert__prepend\\"><i class=\\"mdi-alert-circle mdi v-icon notranslate v-theme--light\\" style=\\"font-size: 28px; height: 28px; width: 28px;\\" aria-hidden=\\"true\\" density=\\"default\\"></i></div>
    <div class=\\"v-alert__content\\">
      <!---->
      <!----> TODO: display the average rating <br> Vuetify has a component for this. Use this one
    </div>
    <!---->
    <!---->
  </div>
  <div class=\\"v-card-text\\">
    <div class=\\"flex gap-2\\"><i class=\\"mdi-map-marker mdi v-icon notranslate v-theme--light v-icon--size-default text-slate-300\\" aria-hidden=\\"true\\"></i>
      <div class=\\"text-slate-600\\"><pre class=\\"my-0\\"></pre>
      </div>
    </div>
  </div>
  <div class=\\"v-card-actions mt-auto\\"><a class=\\"v-btn v-theme--light text-primary v-btn--density-default v-btn--size-default v-btn--variant-tonal\\" href=\\"/restaurants/undefined\\"><span class=\\"v-btn__overlay\\"></span><span class=\\"v-btn__underlay\\"></span>
      <!----><span class=\\"v-btn__content\\" data-no-activator=\\"\\"> see more </span>
      <!---->
      <!---->
    </a></div>
  <!---->
  <!----><span class=\\"v-card__underlay\\"></span>
</div>"
`;

exports[`restaurant-card > renders correctly a restaurant 1`] = `
"<div class=\\"v-card v-theme--light v-card--density-default v-card--variant-elevated\\">
  <!---->
  <div class=\\"v-card__loader\\">
    <div class=\\"v-progress-linear v-theme--light v-locale--is-ltr\\" style=\\"top: 0px; height: 0px; --v-progress-linear-height: 2px; left: 50%; transform: translateX(-50%);\\" role=\\"progressbar\\" aria-hidden=\\"true\\" aria-valuemin=\\"0\\" aria-valuemax=\\"100\\">
      <!---->
      <div class=\\"v-progress-linear__background\\" style=\\"width: 100%;\\"></div>
      <div class=\\"v-progress-linear__indeterminate\\">
        <div class=\\"v-progress-linear__indeterminate long\\"></div>
        <div class=\\"v-progress-linear__indeterminate short\\"></div>
      </div>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  <v-img-stub height=\\"100\\" cover=\\"true\\" eager=\\"false\\" options=\\"[object Object]\\" src=\\"https://s3-media2.fl.yelpcdn.com/bphoto/RDKmsxZZczP4EiTCB9AYOw/o.jpg\\" inline=\\"false\\" transition=\\"fade-transition\\"></v-img-stub>
  <div class=\\"v-card-title\\">Billy The Butcher</div>
  <div class=\\"v-alert v-theme--light text-warning v-alert--density-default v-alert--variant-tonal mx-4 w-1/2\\" role=\\"alert\\">
    <!----><span class=\\"v-alert__underlay\\"></span>
    <!---->
    <div class=\\"v-alert__prepend\\"><i class=\\"mdi-alert-circle mdi v-icon notranslate v-theme--light\\" style=\\"font-size: 28px; height: 28px; width: 28px;\\" aria-hidden=\\"true\\" density=\\"default\\"></i></div>
    <div class=\\"v-alert__content\\">
      <!---->
      <!----> TODO: display the average rating <br> Vuetify has a component for this. Use this one
    </div>
    <!---->
    <!---->
  </div>
  <div class=\\"v-card-text\\">
    <div class=\\"flex gap-2\\"><i class=\\"mdi-map-marker mdi v-icon notranslate v-theme--light v-icon--size-default text-slate-300\\" aria-hidden=\\"true\\"></i>
      <div class=\\"text-slate-600\\"><pre class=\\"my-0\\">Jungfernstieg 16 - 20
4. OG
20354 Hamburg
Germany</pre>
      </div>
    </div>
  </div>
  <div class=\\"v-card-actions mt-auto\\"><a class=\\"v-btn v-theme--light text-primary v-btn--density-default v-btn--size-default v-btn--variant-tonal\\" href=\\"/restaurants/7974729\\"><span class=\\"v-btn__overlay\\"></span><span class=\\"v-btn__underlay\\"></span>
      <!----><span class=\\"v-btn__content\\" data-no-activator=\\"\\"> see more </span>
      <!---->
      <!---->
    </a></div>
  <!---->
  <!----><span class=\\"v-card__underlay\\"></span>
</div>"
`;
